--- a/templates/courses.html
+++ b/templates/courses.html
@@ -8,7 +8,23 @@
             <h1>Запись на спортивные курсы МГТУ им. Н. Э. Баумана</h1>
         </div>
         <div>
-            <form method="GET" action="" name="search" style="display:flex;align-items: center;"></form>
+            <form method="GET" action="" name="search" style="display:flex;align-items: center;">
+                <label for="card_title" style="float:left; margin-right: 10px; margin-left: 10px">Введите название:</label>
+                <input type="text" id="card_title" name="card_title" style="float: left; margin-right: 20px">
+                <input type="submit" class="button" value="Поиск..." style="cursor: pointer !important">
+            </form>
         </div>
+        <div class="card_group">
+            {{ range .cards}}
+            <div class="card">
+                <img class="card_image" src="{{ .Image }}" alt="картинка">
+                <h3 class="card_title">{{ .Title }}</h3>
+                <p class="card-text">{{ .Text }}</p>
+                <a class="button card_button" href="{{ .Title }}">Подробнее</a>
+            </div>
+            {{ end }}
+        </div>
+        <div style="flex:1"></div>
+        <footer>привет</footer>
     </body>
 </html>
