--- a/templates/courses.html
+++ b/templates/courses.html
@@ -17,7 +17,7 @@
         <div class="card_group">
             {{ range .cards}}
             <div class="card">
-                <img class="card_image" src="{{ .Image }}" alt="картинка">
+                <img class="card_image" src="{{ .Image }}" alt="Изображение курса">
                 <h3 class="card_title">{{ .Title }}</h3>
                 <p class="card-text">{{ .Text }}</p>
                 <a class="button card_button" href="{{ .Title }}">Подробнее</a>
@@ -25,6 +25,6 @@
             {{ end }}
         </div>
         <div style="flex:1"></div>
-        <footer>привет</footer>
+        <footer>© Konstantin Samoylov, 2023</footer>
     </body>
 </html>
