--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -6,9 +6,11 @@
 
 .card_group {
   overflow-y: hidden;
-  display:flex;
+  display: flex;
   align-items: stretch;
   overflow: hidden;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .card {
@@ -18,7 +20,17 @@
   margin: 1em;
   width: 225px;
   height: 400px;
-  border: 3px solid rgb(32, 12, 163);
+  border: 2px solid rgb(46, 79, 79);
+  border-radius: 12px;
+  color: white;
+  box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.3);
+  transition: transform 0.15s ease;
+}
+
+.card:hover {
+  transition: 0.15s ease, transform 0.15s ease;
+  transform: scale(1.02);
+  box-shadow: 0px 5px 16px rgba(0, 0, 0, 0.4);
 }
 
 .card_search {  
@@ -29,54 +41,73 @@
 }
 
 .card_image {
-  object-fit:contain;
-  width: 225px;
-  height: 270px;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
   max-width: 100%;
-  max-height: 100%;
+  max-height: 60%;
+  border-radius: 12px;
 }
 
 .card_title {
-  color: #031c4b;
+  color: rgb(255, 255, 255, 0.9);
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.65);
 }
 
 .card_button {
   position: absolute;
   bottom: 0px;
-  margin-bottom: 10px;
-}
+  margin-bottom: 15px;
+} 
 
 .button {
-  float:left;
-  border-radius: 4px;
-  border: solid 3px rgb(7, 62, 172);
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
-  background: #4479BA;
-  color: #FFF;
+  transition: 0.15s ease, transform 0.15s ease;
+  float: left;
+  border-radius: 12px;
+  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.65);
+  box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.2);
+  background: rgb(14, 131, 136);
+  color: rgb(255, 255, 255, 0.9);
   padding: 8px 12px;
   text-decoration: none;
   text-align: center;
 }
 
 .button:hover {
-  background: #214c81;
+  background: rgb(46, 79, 79);
+  transform: scale(1.05);
 }
 
 .header {
-  padding: 30px;
-  text-align: center  ;
-  background:rgb(7, 62, 172);
-  color: white;
+  padding: 10px;
+  text-align: center;
+  background: linear-gradient(to bottom, rgb(14, 131, 136), rgb(12, 115, 100));
+  color: rgb(255, 255, 255, 0.9);
   font-size: 16px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.button:focus,
+.card_button:focus {
+  outline: none;
+  border: 1px solid rgba(46, 79, 79, 0.0);
 }
 
 body {
-  display:flex;
+  display: flex;
   flex-direction: column;
-  min-height: 100vh; margin:0;
+  min-height: 100vh;
+  margin: 0;
+  background-color: rgb(44, 51, 51);
 }
 
 footer {
   text-align: right;
+  font-size: small;
+  color: rgb(120, 120, 120);
+  margin-right: 7px;
+  margin-bottom: 5px;
 }
