minor UI changes

--- a/templates/courses.html
+++ b/templates/courses.html
@@ -8,10 +8,10 @@
             <h1>Запись на спортивные курсы МГТУ им. Н. Э. Баумана</h1>
         </div>
         <div>
-            <form method="GET" action="" name="search" style="display:flex;align-items: center;">
+            <form method="GET" action="" name="search" style="display: flex; align-items: center;">
                 <label for="card_title" style="float:left; margin-right: 10px; margin-left: 10px">Введите название:</label>
                 <input type="text" id="card_title" name="card_title" style="float: left; margin-right: 20px">
-                <input type="submit" class="button" value="Поиск..." style="cursor: pointer !important">
+                <input type="submit" class="button" value="Поиск" style="cursor: pointer">
             </form>
         </div>
         <div class="card_group">
