--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -14,9 +14,7 @@
 }
 
 .card_group {
-  overflow-y: hidden;
   display: flex;
-  overflow: hidden;
   flex-wrap: wrap;
   justify-content: flex-start;
 }
@@ -24,8 +22,7 @@
 .card {
   position: relative;
   padding: 1em;
-  float: left;
-  margin: 1em 1em;
+  margin: 1em;
   width: 225px;
   height: 400px;
   border: 2px solid rgb(46, 79, 79);
@@ -49,7 +46,7 @@
 }
 
 .card_image {
-  object-fit: cover;
+  object-fit: contain;
   width: 100%;
   height: 100%;
   max-width: 100%;
@@ -73,6 +70,7 @@
 }
 
 .button {
+  cursor: pointer;
   transition: 0.15s ease, transform 0.15s ease;
   float: left;
   border-radius: 12px;
