preliminarily finish lab 1

--- a/templates/course.html
+++ b/templates/course.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="header">
-            <h1>Запись на спортивные курсы МГТУ им. Н. Э. Баумана</h1>
+            <h1><a href="..">Запись на спортивные курсы МГТУ им. Н. Э. Баумана</a></h1>
             <h4>{{ .Title }}</h4>
         </div>
         <div>
