--- a/templates/courses.html
+++ b/templates/courses.html
@@ -21,7 +21,7 @@
             <div class="card">
                 <img class="card_image" src="{{ .Image }}" alt="Изображение курса">
                 <h3 class="course_title">{{ .Title }}</h3>
-                <a class="button card_button" href="{{ .Title }}">Подробнее</a>
+                <a class="button card_button" href="{{ .Title }}">➜</a>
             </div>
             {{ end }}
         </div>
