--- a/templates/course.html
+++ b/templates/course.html
@@ -13,10 +13,10 @@
         <div>
             <img src="{{ .Image }}" style="width: 200px;">
             <p>{{ .Text }}</p>
-            <p style="margin-left: 10px;"> Количество мест: {{ .Capacity}} чел.</p>
-            <p style="margin-left: 10px;"> Зарегистрировано: {{ .Registered }} чел.</p>
-            <p style="margin-left: 10px;">{{ .Details }}</p>
-            <a class="button" href="..">Домой</a>
+            <p style="margin-left: 8px;"> Количество мест: {{ .Capacity}} чел.</p>
+            <p style="margin-left: 8px;"> Зарегистрировано: {{ .Registered }} чел.</p>
+            <p style="margin-left: 8px;">{{ .Details }}</p>
+            <a class="button" style="margin-left: 10px;" href="..">Домой</a>
         </div>
         <div style="flex:1"></div>
         <footer>© Konstantin Samoylov, 2023</footer>
