--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -130,6 +130,11 @@ body {
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.65);
 }
 
+body p {
+  padding-left: 7px;
+  width: 25%;
+}
+
 footer {
   text-align: right;
   font-size: small;
