--- a/templates/course.html
+++ b/templates/course.html
@@ -8,10 +8,10 @@
     <body>
         <div class="header">
             <h1><a href="..">Запись на спортивные курсы МГТУ им. Н. Э. Баумана</a></h1>
-            <h4>{{ .Title }}</h4>
+            <h5>{{ .Title }}</h5>
         </div>
         <div>
-            <img src="{{ .Image }}" style="width: 200px;">
+            <img src="{{ .Image }}" style="width: 200px; margin-left: 10px">
             <p>{{ .Text }}</p>
             <p style="margin-left: 8px;"> Количество мест: {{ .Capacity}} чел.</p>
             <p style="margin-left: 8px;"> Зарегистрировано: {{ .Registered }} чел.</p>
