--- a/templates/courses.html
+++ b/templates/courses.html
@@ -10,9 +10,8 @@
             <h1>Запись на спортивные курсы МГТУ им. Н. Э. Баумана</h1>
         </div>
         <div>
-            <form method="GET" action="" name="search" style="display: flex; align-items: center;">
-                <label for="course_title" style="float:left; margin-right: 10px; margin-left: 10px">Введите название:</label>
-                <input type="text" id="course_title" name="course_title" style="float: left; margin-right: 20px" value="{{ .Search }}">
+            <form method="GET" action="" name="search" style="display: flex; align-items: center; margin-left: 20px;">
+                <input type="text" id="course_title" name="course_title" style="float: left; margin-right: 20px" value="{{ .Search }}" placeholder="Название курса">
                 <input type="submit" class="button" value="Поиск" style="cursor: pointer">
             </form>
         </div>
