--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -48,7 +48,7 @@
 
 .card:hover {
   transition: 0.15s ease, transform 0.15s ease;
-  transform: scale(1.02);
+  transform: scale(1.04);
   box-shadow: 0px 5px 16px rgba(0, 0, 0, 0.4);
 }
 
@@ -121,6 +121,7 @@ input {
   padding: 5px 10px;
   text-decoration: none;
   text-align: center;
+  font-weight: 600;
   border-width: 0;
 }
 
