--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -11,7 +11,7 @@
 
 .header {
   text-align: center;
-  background: linear-gradient(to bottom, rgb(14, 131, 136), rgb(12, 115, 100));
+  background: rgb(14, 131, 136);
   color: rgb(255, 255, 255, 0.9);
   font-size: 16px;
   margin-bottom: 2%;
