--- a/templates/courses.html
+++ b/templates/courses.html
@@ -11,7 +11,7 @@
         </div>
         <div>
             <form method="GET" action="" name="search" style="display: flex; align-items: center; margin-left: 20px;">
-                <input type="text" id="course_title" name="course_title" style="float: left; margin-right: 20px" value="{{ .Search }}" placeholder="Название курса">
+                <input type="text" id="course_title" name="course_title" style="float: left; margin-right: 20px; height: 32px;" value="{{ .Search }}" placeholder="Название курса">
                 <input type="submit" class="button" value="Поиск" style="cursor: pointer !important;">
             </form>
         </div>
